--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,21 @@
 *{
   font-family: Helvetica;
+  margin: 0;
+}
+
+#navbar {
+  border-bottom: 1px solid #CCC;
+  padding: 0.5rem;
+  margin-bottom: 1em;
+}
+
+#navbar ul {
+  display: flex;
+  list-style: none;
+}
+
+#navbar ul li{
+  margin-left: 1em;
 }
 
 h1{
@@ -35,4 +51,12 @@ h1{
 
 .bold{
   font-weight: bold;
+}
+
+#book-page {
+  padding: 2em;
+}
+
+#book-page .container{
+  text-align: center;
 }
