--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,3 +60,13 @@ h1{
 #book-page .container{
   text-align: center;
 }
+
+.action{
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
+}
+
+.action a {
+  margin-right: 1em;
+}
